@@ -1,6 +1,8 @@
 Revision history for Data-SearchEngine-ElasticSearch
 
 {{$NEXT}}
+  * Don't wrap delete in a try {}, since it breaks for no reason
+  * Don't delete type and index from the passed in item
 
 0.13 Dec 11 2011
   * Use Time::HiRes so that the elapsed time works.
